<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_history"
        android:title=""
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_exit"
        android:title="@string/main_menu"
        app:showAsAction="never"/>
</menu>